# atlas-cppunit-oktober-2022

./: README.md
FakeDemo/: my_service_using_dependency.h
LoggerProjekt/: LoggerProjekt.sln
LoggerProjekt/LoggerProjekt/: Appender.h  ConsolenAppender.h  Logger.h  LoggerProjekt.vcxproj  LoggerProjekt.vcxproj.filters
Tag1_01Stapel/: Tag1_01Stapel.sln
Tag1_01Stapel/Tag1_01Stapel/: StapelException.h  Tag1_01Stapel.cpp  Tag1_01Stapel.vcxproj  Tag1_01Stapel.vcxproj.filters  stapel.cpp  stapel.h
Tag1_01Stapel/Tag1_01StapelTest/: StapelTest.h  Tag1_01StapelTest.vcxproj  test.cpp
Tag1_02StapelMitCmake/: CMakeLists.txt
Tag1_02StapelMitCmake/tests/: CMakeLists.txt  StapelTest.cpp
Tag1_03Schwein/: CMakeLists.txt
Tag1_03Schwein/source/: CalcClient.h  Schwein.h  main.cpp
Tag1_03Schwein/source/math/: Calculator.h  CalculatorImpl.h  CalculatorLogger.h
Tag1_03Schwein/tests/: CMakeLists.txt  CalcClientTest.cpp  CalcClientTest.h  MockCalculator.h
Tag2_01PersonenServiceProjekt/: CMakeLists.txt
Tag2_01PersonenServiceProjekt/source/persistence/: person.h
Tag2_01PersonenServiceProjekt/source/service/: blacklist_service.h  personen_service_impl.h
Tag2_01PersonenServiceProjekt/tests/: CMakeLists.txt  Mockblacklist_service.h  Mockpersonen_repository.h  StapelTest.cpp  StapelTest.h  personen_service_impl_test.cpp  personen_service_impl_test.h
Tag3_01ComputerPlayer/: CMakeLists.txt
Tag3_01ComputerPlayer/source/: computer_player.h
Tag3_01ComputerPlayer/tests/: CMakeLists.txt  computer_player_test.h
